# exmex-benchmarks

./: Cargo.toml  LICENSE  README.md  results.txt
benches/: benchmark.rs
