[package]
name = "exmex-benchmarks"
version = "0.1.0"
edition = "2024"


[dev-dependencies]
rand = "0.9.2"
exmex = { version = "0.20.4", features = ["partial", "serde", "value"] }
itertools = "0.14.0"
criterion = "0.7.0"
evalexpr = "12.0.2"
serde_test = "1.0.177"
serde_json = "1.0.145"
serde = "1.0.228"
toml = "0.9.7"

[[bench]]
name = "benchmark"
harness = false
